--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "expo": "~36.0.0",
     "expo-cli": "^3.11.3",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-web": "~0.11.7",
+    "react-zlib-js": "^1.0.4",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
